# mir_control_gui

./: main.py  teleop_control.py
App MIR100/: app.py  button_teleop.py  main.py
App MIR100/assets/: style.css
App MIR100/back_up/: ros_map_listener_backup.py  rviz_mode_backup.py
App MIR100/components/: draw_mode.py  map_section.py  rviz_section.py  sidebar.py
App MIR100/function_draw_mode/: draw_line_mode_callbacks.py
App MIR100/listener_topic_from_ros/: ros_lidar_listener.py  ros_map_listener.py  ros_path_listener.py  ros_pose_robot_listener.py
App_MIR100/: app.py  main.py
App_MIR100/assets/: style.css
App_MIR100/back_up/: rviz_mode_backup.py
App_MIR100/components/: draw_mode.py  goal_selection.py  rviz_section.py  sidebar.py  status_bar.py
App_MIR100/function_draw_mode/: clear_line.py  draw_arc_callback.py  draw_arc_mode_callbacks.py  draw_line_mode_callbacks.py
App_MIR100/function_teleop_control/: teleop_control.py
App_MIR100/listener_topic_from_ros/: ros_path_listener.py
Cobot/: CMakeLists.txt  package.xml
Cobot/config/: joint_names_Cobot.yaml
Cobot/launch/: display.launch  (+1 more)
Cobot30_5/: CMakeLists.txt  package.xml
assets/: style.css
cobot30_5/: CMakeLists.txt  package.xml
pages/: __init__.py  page_2.py
path_planning/path_planning/: CMakeLists.txt  package.xml
path_planning/path_planning/cpp/: demo.cpp
path_planning/path_planning/cpp/include/: reeds_shepp.hpp  theta_star_planner.hpp  utils.hpp
path_planning/path_planning/cpp/src/: reeds_shepp.cpp  theta_star_planner.cpp  utils.cpp
reeds-shepp-curves/: drawing.eps  main.py
(+58 files in other folders)
